Fix main content overlapping sidebar in rare instances

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -29,9 +29,9 @@
   }
 
   @include mq(lg) {
-    margin-left: calc(
+    margin-left: Max(#{$nav-width}, calc(
       (100% - #{$nav-width + $content-width}) / 2 + #{$nav-width}
-    );
+    ));
   }
 }
 
